Correct spacing of header title

--- a/src/blocks/header/Header.scss
+++ b/src/blocks/header/Header.scss
@@ -11,7 +11,7 @@
   }
   .header-title {
     display: inline-block;
-    padding: 10px 30px;
+    padding: 15px 30px;
     h1 {
       font-weight: normal;
     }
